# automated-call-centre

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEMO.md  DESIGN.md  PLAN.md  README.md  TWILIO_INTEGRATION.md  docker-compose.yml
agent/: __init__.py  pipeline.py  pyproject.toml  transcript.py
agent/prompts/: __init__.py  base.py
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24628453590b_initial_schema.py
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/: calls.py  campaigns.py  contacts.py  stats.py  twilio_webhooks.py  webrtc.py
backend/app/services/: call_session.py  dialer.py  disposition.py  telephony.py
backend/tests/: conftest.py  test_campaigns.py  test_contacts.py  test_dialer.py  test_health.py  test_stats.py  test_twilio_webhooks.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/calls/: page.tsx
frontend/app/calls/[id]/: page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/campaigns/[id]/: page.tsx
frontend/app/contacts/: page.tsx
frontend/components/: call-widget.tsx  empty-state.tsx  page-header.tsx  sidebar.tsx
frontend/lib/: api.ts
