[project]
name = "acc-agent"
version = "0.1.0"
description = "AI automated call center - Pipecat voice agent"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[deepgram,google,webrtc,websocket]>=1.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "agent.prompts"]

[tool.setuptools.package-dir]
"agent" = "."
"agent.prompts" = "prompts"
